objects/CRM_Weekly_Target_and_Achievement__c.object
<CustomObject>
    <fields>
        <fullName>CRM_Daily_Achievement__c</fullName>
        <label>Daily Achievement</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Daily_Target__c</fullName>
        <label>Daily Target</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_From__c</fullName>
        <label>From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRM_KPI_Record_Type_Id__c</fullName>
        <formula>CASESAFEID(CRM_Monthly_Target_and_Achievement__r.CRM_KPI__r.RecordType.Id)</formula>
        <label>KPI Record Type Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_KPI_User__c</fullName>
        <formula>CASESAFEID(CRM_Monthly_Target_and_Achievement__r.CRM_KPI__r.CRM_User__r.Id)</formula>
        <label>KPI User Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Monthly_Target_and_Achievement__c</fullName>
        <label>Monthly Target and Achievement</label>
        <referenceTo>CRM_Monthly_Target_and_Achievement__c</referenceTo>
        <relationshipLabel>Weekly Target and Achievements</relationshipLabel>
        <relationshipName>Weekly_Target_and_Achievements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CRM_To__c</fullName>
        <label>To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRM_Weekly_Achievement__c</fullName>
        <label>Weekly Achievement</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Weekly_Target__c</fullName>
        <label>Weekly Target</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Weekly Target and Achievement</label>
    <nameField>
        <label>Weekly Target and Achievement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Weekly Target and Achievements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>